welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.code
if(estFaceBiscuit){
	avance();
}else{recule();
}

